--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
 
 </head>
 <body>
-	<div class="box">
-	<!--<input type="text" placeholder="Digite aqui">-->
+	<div class="box"
 	<button id="contar">Contar</button>
 	<textarea id="textC" rows="10" cols="30" placeholder="Digite aqui"></textarea>
 	<p id="words"></p>
